Replace Google Maps API key with placeholder

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3 id="legend-title">Categorías</h3>
     </div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARPYo6hXKPHDSGN9Das5FGK2EF1HTeNps"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=APIKEY"></script>
     <script src="scripts/app.js"></script>
 </body>
 </html>
